Property and buildings

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -49,6 +49,7 @@
   <script src="js/main.js"></script>
   <script src="js/services/ui-load.js"></script>
   <script src="js/services/lb-services.js"></script>
+  <script src="js/services/lb-auth.js"></script>
   <script src="js/filters/fromNow.js"></script>
   <script src="js/directives/setnganimate.js"></script>
   <script src="js/directives/ui-butterbar.js"></script>
@@ -60,6 +61,7 @@
   <script src="js/directives/ui-scroll.js"></script>
   <script src="js/directives/ui-shift.js"></script>
   <script src="js/directives/ui-toggleclass.js"></script>
+  <script src="js/directives/is-allowed.js"></script>
   <script src="js/controllers/bootstrap.js"></script>
   <!-- Lazy loading -->
 </body>
