--- a/client/src/tpl/blocks/nav.html
+++ b/client/src/tpl/blocks/nav.html
@@ -53,12 +53,17 @@
         </a>
       </li>
       <li ui-sref-active="active">
-        <a ui-sref="setting.system">
-          <span>System</span>
+        <a ui-sref="setting.property.set-scope">
+          <span>Set Property Scope</span>
         </a>
       </li>
       <li ui-sref-active="active">
-        <a ui-sref="setting.building">
+        <a ui-sref="setting.property.index">
+          <span>Property</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="setting.building.list">
           <span>Building</span>
         </a>
       </li>
@@ -70,6 +75,21 @@
       <li ui-sref-active="active">
         <a ui-sref="setting.unitType">
           <span>Unit Type</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="setting.user.list">
+          <span>User</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="setting.role">
+          <span>Role</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
+        <a ui-sref="setting.acl">
+          <span>Access Permission</span>
         </a>
       </li>
     </ul>
@@ -257,7 +277,6 @@
             <a ui-sref="app.ui.googlemap">
               <span>Google Map</span>
             </a>
-          </li>
           </li>
         </ul>
       </li>
