Unit type setting

--- a/client/src/tpl/blocks/nav.html
+++ b/client/src/tpl/blocks/nav.html
@@ -58,7 +58,7 @@
         </a>
       </li>
       <li ui-sref-active="active">
-        <a ui-sref="setting.property.index">
+        <a ui-sref="setting.property.list">
           <span>Property</span>
         </a>
       </li>
@@ -68,15 +68,16 @@
         </a>
       </li>
       <li ui-sref-active="active">
+        <a ui-sref="setting.unit-type.list">
+          <span>Unit Type</span>
+        </a>
+      </li>
+      <li ui-sref-active="active">
         <a ui-sref="setting.unit">
           <span>Unit</span>
         </a>
       </li>
-      <li ui-sref-active="active">
-        <a ui-sref="setting.unitType">
-          <span>Unit Type</span>
-        </a>
-      </li>
+
       <li ui-sref-active="active">
         <a ui-sref="setting.user.list">
           <span>User</span>
