--- a/client/src/tpl/property/modal.form.management.html
+++ b/client/src/tpl/property/modal.form.management.html
@@ -10,7 +10,7 @@
           <div class="col-sm-9">
             <input type="text" ng-model="item.code" class="form-control form-validation"
                    ng-trim="false" ng-change="item.code = item.code.split(' ').join('').toUpperCase()"
-                   placeholder="No space" required>
+                   required>
           </div>
         </div>
       </div>
