--- a/client/src/tpl/blocks/nav.html
+++ b/client/src/tpl/blocks/nav.html
@@ -73,7 +73,7 @@
         </a>
       </li>
       <li ui-sref-active="active">
-        <a ui-sref="setting.unit">
+        <a ui-sref="setting.unit.list">
           <span>Unit</span>
         </a>
       </li>
