Patch untuk tidak dapat login dan set property scope

--- a/client/src/tpl/blocks/nav.html
+++ b/client/src/tpl/blocks/nav.html
@@ -54,7 +54,7 @@
       </li>
       <li ui-sref-active="active">
         <a ui-sref="setting.property.set-scope">
-          <span>Set Property Scope</span>
+          <span>Change Property Scope</span>
         </a>
       </li>
       <li ui-sref-active="active">
