--- a/client/src/tpl/property/set-scope.html
+++ b/client/src/tpl/property/set-scope.html
@@ -1,7 +1,7 @@
 <div class="wrapper-md">
   <div class="panel panel-default">
     <div class="panel-heading font-bold">
-      Set Property Scope
+      Change Property Scope
     </div>
     <div class="panel-body">
     <form class="form-horizontal form-validation" role="form" ng-submit="setPropertyScope()" name="form">
